Remove hover style from index.html

--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
       crossorigin="anonymous"
     />
 
-    <style>
-      .hover:hover {
-        background-color: blue;
-      }
-    </style>
+    <style></style>
   </head>
 
   <body>
